@@ -5,15 +5,16 @@ import lombok.extern.slf4j.Slf4j;
 import no.fint.antlr.FintFilterService;
 import no.fint.model.FintIdentifikator;
 import no.fint.model.resource.FintResource;
-import no.fint.model.resource.FintResources;
+import no.fintlabs.model.resource.FintResources;
 import no.fintlabs.cache.Cache;
 import no.fintlabs.cache.CacheService;
-import no.fintlabs.consumer.kafka.entity.EntityProducer;
+import no.fintlabs.consumer.config.ConsumerConfiguration;
+import no.fintlabs.consumer.kafka.entity.ConsumerRecordMetadata;
 import no.fintlabs.consumer.kafka.entity.KafkaEntity;
-import no.fintlabs.consumer.kafka.event.RelationRequestService;
+import no.fintlabs.consumer.kafka.event.RelationRequestProducer;
+import no.fintlabs.consumer.kafka.sync.SyncTrackerService;
 import no.fintlabs.consumer.links.LinkService;
-import no.fintlabs.consumer.links.RelationMutationService;
-import org.apache.commons.lang3.StringUtils;
+import no.fintlabs.consumer.links.relation.RelationService;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
@@ -25,6 +26,8 @@ import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
+import static no.fintlabs.autorelation.model.RelationRequestKt.createDeleteRequest;
+
 @Slf4j
 @Service
 @RequiredArgsConstructor
@@ -32,15 +35,28 @@ public class ResourceService {
 
     private final LinkService linkService;
     private final CacheService cacheService;
-    private final EntityProducer entityProducer;
+    private final RelationService relationService;
     private final ResourceMapperService resourceMapper;
     private final FintFilterService oDataFilterService;
-    private final RelationRequestService relationRequestService;
-    private final RelationMutationService relationMutationService;
+    private final RelationRequestProducer relationRequestProducer;
+    private final ConsumerConfiguration consumerConfiguration;
+    private final SyncTrackerService syncTrackerService;
 
-    public void handleNewEntity(KafkaEntity kafkaEntity) {
-        if (kafkaEntity.getResource() == null) deleteEntry(kafkaEntity);
-        else addToCache(kafkaEntity);
+    public void processEntityConsumerRecord(KafkaEntity entityConsumerRecord) {
+        String resourceName = entityConsumerRecord.getResourceName();
+        cacheService.updateRetentionTime(resourceName, entityConsumerRecord.getRetentionTime());
+
+        if (entityConsumerRecord.getResource() == null) {
+            deleteEntity(entityConsumerRecord);
+        } else {
+            addToCache(entityConsumerRecord);
+        }
+
+        // Track sync status and evict cache if full sync is completed
+        ConsumerRecordMetadata recordMetadata = entityConsumerRecord.getConsumerRecordMetadata();
+        if (recordMetadata != null) {
+            syncTrackerService.processRecordMetadata(resourceName, recordMetadata);
+        }
     }
 
     public FintResource mapResourceAndLinks(String resourceName, Object object) {
@@ -49,52 +65,38 @@ public class ResourceService {
         return fintResource;
     }
 
-    private void deleteEntry(KafkaEntity kafkaEntity) {
-        Cache<FintResource> cache = cacheService.getCache(kafkaEntity.getName());
+    private void deleteEntity(KafkaEntity kafkaEntity) {
+        Cache<FintResource> cache = cacheService.getCache(kafkaEntity.getResourceName());
 
         FintResource fintResource = cache.get(kafkaEntity.getKey());
-        long lastDelivered = cache.getLastDelivered(kafkaEntity.getKey());
 
         if (fintResource != null) {
-            relationRequestService.publishDeleteRequest(kafkaEntity.getName(), fintResource, lastDelivered);
+            publishDeleteRequestToKafka(kafkaEntity.getResourceName(), fintResource);
         }
 
         cache.remove(kafkaEntity.getKey());
     }
 
-    private void addToCache(KafkaEntity kafkaEntity) {
-        Objects.requireNonNull(kafkaEntity.getResource());
-        Cache<FintResource> cache = cacheService.getCache(kafkaEntity.getName());
-
-        handleRelations(cache, kafkaEntity);
-        linkService.mapLinks(kafkaEntity.getName(), kafkaEntity.getResource());
-
-        if (kafkaEntity.getCreatedTime() == null) {
-            cache.put(kafkaEntity.getKey(), kafkaEntity.getResource(), hashCodes(kafkaEntity.getResource()));
-        } else {
-            cache.put(kafkaEntity.getKey(), kafkaEntity.getResource(), hashCodes(kafkaEntity.getResource()), kafkaEntity.getCreatedTime());
-        }
+    private void publishDeleteRequestToKafka(String resourceName, FintResource resource) {
+        relationRequestProducer.publish(
+                createDeleteRequest(
+                        consumerConfiguration.getOrgId(),
+                        consumerConfiguration.getDomain(),
+                        consumerConfiguration.getPackageName(),
+                        resourceName,
+                        resource
+                )
+        );
     }
 
-    private void handleRelations(Cache<FintResource> cache, KafkaEntity kafkaEntity) {
-        if (!relationMutationService.isControlled(kafkaEntity.getName())) return;
-        Objects.requireNonNull(kafkaEntity.getResource());
-        FintResource previousEntity = cache.get(kafkaEntity.getKey());
+    private void addToCache(KafkaEntity entity) {
+        Objects.requireNonNull(entity.getResource());
+        Cache<FintResource> cache = cacheService.getCache(entity.getResourceName());
 
-        if (kafkaEntity.getTrueState()) {
-            entityProducer.produceEntity(kafkaEntity);
-            return;
-        }
+        relationService.handleLinks(entity.getResourceName(), entity.getKey(), entity.getResource());
+        linkService.mapLinks(entity.getResourceName(), entity.getResource());
 
-        if (previousEntity != null) {
-            relationMutationService.mutateNewEntity(
-                    kafkaEntity.getName(),
-                    kafkaEntity.getResource(),
-                    previousEntity
-            );
-
-            entityProducer.produceEntity(kafkaEntity);
-        }
+        cache.put(entity.getKey(), entity.getResource(), hashCodes(entity.getResource()), entity.getLastModified());
     }
 
     public int[] hashCodes(FintResource resource) {
@@ -129,7 +131,7 @@ public class ResourceService {
     }
 
     private Stream<FintResource> applyFilter(Stream<FintResource> stream, String filter) {
-        if (StringUtils.isBlank(filter)) return stream;
+        if (filter == null || filter.isBlank()) return stream;
 
         if (!oDataFilterService.validate(filter)) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Invalid OData filter");
